# twitch-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  init.rs  main.rs
