[package]
name = "twitch-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
time = { version = "0.3.36", features = ["serde-well-known"] }
websocket = "0.27.1"
